--- a/upper_com/packages.config
+++ b/upper_com/packages.config
@@ -1,20 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.3.1" targetFramework="net48" />
+  <package id="DotNetProjects.DotNetSiemensPLCToolBoxLibrary" version="4.0.489" targetFramework="net48" />
+  <package id="Enums.NET" version="4.0.1" targetFramework="net48" />
+  <package id="EPPlus" version="7.4.1" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
+  <package id="ExtendedNumerics.BigDecimal" version="2025.1001.2.129" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.26.1" targetFramework="net48" />
   <package id="K4os.Compression.LZ4" version="1.3.8" targetFramework="net48" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.8" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net48" />
+  <package id="MathNet.Numerics.Signed" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="MySql.Data" version="9.1.0" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
+  <package id="NPOI" version="2.7.1" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.4.2" targetFramework="net48" />
+  <package id="SixLabors.Fonts" version="1.0.1" targetFramework="net48" />
+  <package id="SixLabors.ImageSharp" version="2.1.8" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Pkcs" version="6.0.3" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="6.0.1" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="ZstdSharp.Port" version="0.8.0" targetFramework="net48" />
 </packages>
