--- a/upper_com/upper_com.csproj
+++ b/upper_com/upper_com.csproj
@@ -89,9 +89,6 @@
     <Reference Include="Microsoft.Office.Tools.Excel, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="MySql.Data, Version=9.1.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.9.1.0\lib\net48\MySql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="NPOI.Core, Version=2.7.1.0, Culture=neutral, PublicKeyToken=0df73ec7942b34e1, processorArchitecture=MSIL">
       <HintPath>..\packages\NPOI.2.7.1\lib\net472\NPOI.Core.dll</HintPath>
     </Reference>
@@ -180,7 +177,6 @@
   <ItemGroup>
     <Compile Include="ExcelUtils.cs" />
     <Compile Include="DataQueue.cs" />
-    <Compile Include="DataSourceManagement.cs" />
     <Compile Include="CurrentData.cs" />
     <Compile Include="DataScreen.cs">
       <SubType>Form</SubType>
@@ -196,8 +192,9 @@
     </Compile>
     <Compile Include="HeartBeatDetection.cs" />
     <Compile Include="MultimeterDetect.cs" />
-    <Compile Include="UpperDetection.cs" />
+    <Compile Include="UpperDetectionFrm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VoltageData.cs" />
     <EmbeddedResource Include="DataScreen.resx">
       <DependentUpon>DataScreen.cs</DependentUpon>
     </EmbeddedResource>
