--- a/upper_com/upper_com.csproj
+++ b/upper_com/upper_com.csproj
@@ -184,6 +184,12 @@
     <Compile Include="DataScreenForm.Designer.cs">
       <DependentUpon>DataScreenForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="IpInputControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="IpInputControl.Designer.cs">
+      <DependentUpon>IpInputControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyButton.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -196,8 +202,8 @@
     <Compile Include="MyLED.Designer.cs">
       <DependentUpon>MyLED.cs</DependentUpon>
     </Compile>
-    <Compile Include="HeartBeatDetection.cs" />
-    <Compile Include="MultimeterDetect.cs" />
+    <Compile Include="PLCDetection.cs" />
+    <Compile Include="MultimeterDetection.cs" />
     <Compile Include="UpperDetectionMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VoltageData.cs" />
