--- a/upper_com/packages.config
+++ b/upper_com/packages.config
@@ -19,6 +19,7 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="NPOI" version="2.7.1" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net48" />
+  <package id="S7netplus" version="0.20.0" targetFramework="net48" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net48" />
   <package id="SixLabors.Fonts" version="1.0.1" targetFramework="net48" />
   <package id="SixLabors.ImageSharp" version="2.1.8" targetFramework="net48" />
