--- a/upper_com/App.config
+++ b/upper_com/App.config
@@ -33,6 +33,10 @@
         <assemblyIdentity name="Microsoft.IO.RecyclableMemoryStream" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ivi.Visa" publicKeyToken="a128c98f1d7717c1" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.11.0.0" newVersion="5.11.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
