--- a/upper_com/packages.config
+++ b/upper_com/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="MySql.Data" version="9.1.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
+  <package id="NLog" version="5.3.4" targetFramework="net48" />
   <package id="NPOI" version="2.7.1" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net48" />
   <package id="S7netplus" version="0.20.0" targetFramework="net48" />
